--- a/main.css
+++ b/main.css
@@ -39,6 +39,10 @@ body {
 .header-right {
 	float: right;
 }
+section.about {
+	max-width: 30em;
+	margin: 0px auto;
+}
 
 .plotpanel {
 	float: left;
