--- a/main.css
+++ b/main.css
@@ -22,11 +22,12 @@ body {
 	float: left;
 	color: white;
 	text-align: center;
-	padding: 12px;
+	padding: 8px 12px;
 	text-decoration: none;
 	font-size: 18px; 
-	line-height: 25px;
-	border-radius: 4px;
+	line-height: 22px;
+	border-radius: 6px;
+	margin: 0 2px;
  }
 .header a:hover {
 	background-color: rgb(194, 173, 207);
